clearing local storage

--- a/src/app/client/signup/signup.component.html
+++ b/src/app/client/signup/signup.component.html
@@ -1,13 +1,15 @@
 <app-topbars></app-topbars>
 
-  <section id="banner12" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide2.png">
+<section id="banner12" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2"
+    data-background="../../../assets/img/banner/slide2.png">
     <div class="container d-flex flex-column justify-content-center align-items-center">
         <div class="main-card">
             <h2>{{ 'register.title' | translate }}</h2>
             <div class="card-container">
                 <div class="card">
 
-                    <a href="/dash" class="card-link" data-toggle="tooltip" title="An individual bank account is perfect for personal financial management, offering a range of services and tools to help you manage your finances, save money, and plan for the future with ease and convenience.">
+                    <a href="/dash" class="card-link" data-toggle="tooltip"
+                        title="Un compte bancaire individuel est parfait pour la gestion financière personnelle, offrant une gamme de services et d’outils pour vous aider à gérer vos finances, à économiser de l’argent et à planifier l’avenir avec facilité et commodité.">
 
                         <div class="card-body">
                             <h5 class="card-title">{{ 'register.type1' | translate }}</h5>
@@ -16,13 +18,15 @@
                 </div>
                 <div class="card">
 
-                    <a href="/professionnel" class="card-link" data-toggle="tooltip" data-custom-class="custom-tooltip" title="Professional bank account is ideal for corporate clients that aim at achieving efficient financial management and optimized cash flow through a range of dedicated services and support.">
+                    <a href="/professionnel" class="card-link" data-toggle="tooltip" data-custom-class="custom-tooltip"
+                        title="Le compte bancaire professionnel est idéal pour les entreprises clientes qui souhaitent obtenir une gestion financière efficace et optimiser leurs flux de trésorerie grâce à une gamme de services et d’assistance dédiés.">
                         <div class="card-body">
                             <h5 class="card-title">{{ 'register.type2' | translate }}</h5>
                         </div>
                     </a>
                 </div>
-                <p class="box-text">Compte déjà existant ? <a class="forgot box-text" href="/bfi/login">Connectez-vous!</a></p>
+                <p class="box-text">Compte déjà existant ? <a class="forgot box-text"
+                        href="/bfi/login">Connectez-vous!</a></p>
             </div>
         </div>
     </div>
@@ -38,6 +42,3 @@
         </div>
     </div>
 </section>
-
-
-
