--- a/src/app/client/transactionsDashboard/default-layout/navbar/navbar.component.html
+++ b/src/app/client/transactionsDashboard/default-layout/navbar/navbar.component.html
@@ -88,7 +88,7 @@
                 </li>
                 <li class="nav-item d-flex align-items-center">
                     <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">
-                        <i class="fa fa-power-off me-sm-1" aria-hidden="true"></i>
+                        <i class="fa fa-power-off me-sm-1" aria-hidden="true"  (click)="logOut()"></i>
                     </a>
                 </li>
            
