--- a/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.html
+++ b/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.html
@@ -1,57 +1,74 @@
 <body class="g-sidenav-show bg-gray-100">
-    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100 side"
-        id="sidenav-main">
-        <div class="sidenav-header">
-            <a class="navbar-brand m-0" href="javascript:;">
-
-                <span class="ms-1 font-weight-bold"><img id="logo" src="../../../assets/img/logos/logo.png"> </span>
-            </a>
-        </div>
-        <hr class="horizontal dark mt-0">
-        <app-transaction-nav></app-transaction-nav>
+    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100 side" id="sidenav-main">
+      <div class="sidenav-header">
+        <a class="navbar-brand m-0" href="javascript:;">
+          <span class="ms-1 font-weight-bold"><img id="logo" src="../../../assets/img/logos/logo.png"> </span>
+        </a>
+      </div>
+      <hr class="horizontal dark mt-0">
+      <app-transaction-nav></app-transaction-nav>
     </div>
     <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
-        <app-navbar></app-navbar>
-        <div class="d-flex align-items-center" style="width: 100%;">
-            <!-- Search Input -->
-            <div class="flex-grow-1 p-0 search-input">
-                <input type="text" class="form-control-mvmt search-box search-form" placeholder="Search by Account"
-                    style="width: 100%; background-color: #ffffff;" ng-change="filtreAccount()"
-                    ng-model="searchaccount">
-            </div>
-            <!-- Icon -->
-            <div class="ms-3"> <!-- Add some margin to separate -->
-                <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                    <i class="fa fa-plus text-lg opacity-10" aria-hidden="true"></i>
-                </div>
-            </div>
+      <app-navbar></app-navbar>
+      <div class="d-flex align-items-center" style="width: 100%;">
+        <div class="flex-grow-1 p-0 search-input">
+          <input type="text" class="form-control-mvmt search-box search-form" placeholder="Search by Account" style="width: 100%; background-color: #ffffff;">
         </div>
-        <div class="card-body p-3" style="max-width: 450px;">
-            <div class="row no-gutters">
-                <div class="col-md-6">
-                    <div class="card-body">
-                        <p class="mb-1 pt-2 text-bold">{{compteType}}</p>
-                        <h5 class="font-weight-bolder">{{clientName}}</h5>
-                        <p><strong>N° Compte :</strong> {{qrData}}</p>
-                        <p><strong>Solde Compte :</strong> {{0 }} XAF</p>
-                        <a href="javascript:;" class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto">
-                            <span class="icon-text">
-                              <i aria-hidden="true" class="fas fa-credit-card"></i> Déposer
-                            </span>
-                          </a>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card-img-right flex-grow-1 bg-transparent"
-                        style="background-size: contain; background-repeat: no-repeat; background-position: center center;">
-                        <qrcode [qrdata]="qrData" [width]="200" [imageHeight]="200"></qrcode>
-                    </div>
-                    <div class="icon-container">
-                        <i class="bi bi-cloud-download download-icon" title="Download PDF" (click)="downloadPDF()"></i>
-                    </div>                
-                </div>
-            </div>
+        <div class="ms-3">
+          <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md" (click)="openModal()">
+            <i class="fa fa-plus text-lg opacity-10" aria-hidden="true"></i>
+          </div>
         </div>
-
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6" *ngFor="let account of accounts">
+            <div class="card-body p-3">
+              <div class="row no-gutters">
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <p class="mb-1 pt-2 text-bold">{{ account.compteType }}</p>
+                    <h5 class="font-weight-bolder">{{ account.clientName }}</h5>
+                    <p><strong>N° Compte :</strong> {{ account.qrData }}</p>
+                    <p><strong>Solde Compte :</strong> {{ account.accountBalance }} XAF</p>
+                    <a href="javascript:;" class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" (click)="GoToDepotRetrait()">
+                      <span class="icon-text">
+                        <i aria-hidden="true" class="fas fa-credit-card"></i> Déposer
+                      </span>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card-img-right flex-grow-1 bg-transparent" style="background-size: contain; background-repeat: no-repeat; background-position: center center;">
+                    <qrcode [qrdata]="account.qrData" [width]="200" [imageHeight]="200"></qrcode>
+                  </div>
+                  <div class="icon-container">
+                    <i class="bi bi-cloud-download download-icon" title="Download PDF" (click)="downloadPDF(account)"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      <!-- Modal -->
+      <div *ngIf="showModal" class="modals">
+        <div class="modal-content">
+          <span class="close" (click)="closeModal()">&times;</span>
+          <div class="form-group">
+            <label for="compteType">Account Type:</label>
+            <select id="compteType" [(ngModel)]="selectedCompteType" class="form-control">
+              <option *ngFor="let type of compteType" [value]="type">{{ type }}</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="clientName">Client Name:</label>
+            <input type="text" id="clientName" [(ngModel)]="clientName" class="form-control">
+          </div>
+          <button (click)="addAccount()" class="btn btn-primary butn">Add Account</button>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
+  
