--- a/src/app/client/signup/signup.component.html
+++ b/src/app/client/signup/signup.component.html
@@ -8,7 +8,7 @@
             <div class="card-container">
                 <div class="card">
 
-                    <a href="/dash" class="card-link" data-toggle="tooltip"
+                    <a href="/dash/informations-personelles" class="card-link" data-toggle="tooltip"
                         title="Un compte bancaire individuel est parfait pour la gestion financière personnelle, offrant une gamme de services et d’outils pour vous aider à gérer vos finances, à économiser de l’argent et à planifier l’avenir avec facilité et commodité.">
 
                         <div class="card-body">
