--- a/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
+++ b/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
@@ -2,8 +2,7 @@
 <body class="g-sidenav-show bg-gray-100">  
     <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100" id="sidenav-main">
         <div class="sidenav-header">
-            <a class="navbar-brand m-0" href="javascript:;">
-                         
+            <a class="navbar-brand m-0" href="javascript:;">  
                 <span class="ms-1 font-weight-bold"><img  id="logo" src="../../../assets/img/logos/logo.png"> </span>
             </a>
         </div>
@@ -13,19 +12,43 @@
         <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
             <app-navbar></app-navbar>
             <div class="container-fluid pt-3 bg-gray-100">
-                <div class="row removable">           
+                <div class="my-10 mx-auto max-w-7xl px-4 mt-5 mb-5">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 text-center text-lg-start">
+                            <h2 class="display-4 fw-bold text-gray-800 mb-3">
+                                Welcome, <span class="text">Client!</span>
+                            </h2>                            
+                            <p class="lead text-muted">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+                            <!-- Button Section -->
+                            <div class="mt-4 d-grid gap-2 d-sm-flex justify-content-sm-center justify-content-lg-start">
+                                <a href="#" class="btn btn-primary butn btn-lg px-4 me-sm-3 ">Get started</a>
+                                <a href="#" class="btn btn-outline-secondary btn-lg px-4 mt-3 mt-sm-0">Live demo</a>
+                            </div>
+                            <!-- End of Button Section -->
+                        </div>
+                        <!-- Image Section -->
+                        <div class="col-lg-6 my-4">
+                    <ng-lottie
+                    [options]="lottieOptions"
+                    (animationCreated)="animationCreated($event)"
+                    ></ng-lottie>
+                        </div>
+                        <!-- End of Image Section -->
+                    </div>
+                </div>                
+                <div id="dashContent" class="row removable">           
                     <div class="col-xl-5 col-sm-6">
                         <div class="card mb-4">
                             <div class="card-body p-3">
                                 <div class="row">
                                     <div (click)="goToExtrait()"class="col-8 mx-auto text-center" style="cursor: pointer;">
-                                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12"  *ngIf="bankAccount">
+                                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                                                 <span>COMPTE COURANT </span><br>
-                                                <span >N° {{extractedRIB}}</span>
+                                                <span >N° 60072680201</span>
                                             </div>
                                             <div class="col-md-12 balance-col ">
                                                 <span style="font-size:20px"> 
-                                                    solde {{ bankAccount.solde }}
+                                                    0 XAF
                                                 </span>
                                             </div>              
                                     </div>                                                                
