--- a/src/app/client/transactionsDashboard/chat/chat.component.html
+++ b/src/app/client/transactionsDashboard/chat/chat.component.html
@@ -25,16 +25,17 @@
                 </div>
               </div>
             </div>
-            <div class="card-footer">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Type your message..." [(ngModel)]="newmessage">
-                <button class="btn btn-primary" (click)="sendMessage()">Send</button>
+            <form #loginForm="ngForm">
+              <div class="card-footer">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Type your message..." name="newmessage" [(ngModel)]="newmessage" required>
+                  <button class="btn btn-primary" (click)="sendMessage()" [disabled]="!loginForm.valid">Send</button>
+                </div>
               </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
-  
   </main>
 </body>
