--- a/src/app/client/transactionsDashboard/my-contacts/my-contacts-add/my-contacts-add.component.html
+++ b/src/app/client/transactionsDashboard/my-contacts/my-contacts-add/my-contacts-add.component.html
@@ -15,8 +15,7 @@
         <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
             <app-navbar></app-navbar>  
             <div class="container">
-                <div class="row"> <!-- Bootstrap row -->
-                  <!-- Table that takes up most of the space -->
+                <div class="row"> 
                   <div class="col-md-12"> 
                     <div class="card-body px-0 pt-0 pb-2">
                     <section class="multi_step_form card-body ">  
