--- a/src/app/client/transactionsDashboard/default-layout/navbar/navbar.component.html
+++ b/src/app/client/transactionsDashboard/default-layout/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid py-1 px-3 bg-gray-100">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-                <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
+                <li class="breadcrumb-item text-sm">{{pageTitle}}</li>
                 <li class="breadcrumb-item text-sm text-dark active" aria-current="page">{{page}}</li>
             </ol>
             <h6 class="font-weight-bolder mb-0">{{page}}</h6>
